// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-34 {
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-31 {
  padding: 0.5rem 0;
  min-width: 200px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-32 {
  background-color: white;
  border-radius: 4px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-32:focus {
  outline: none;
  box-shadow: #9b90f6 0px 0px 0px 3px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-6 {
  color: #3722ed !important;
}

<div
  aria-label="Actions"
  aria-orientation="vertical"
  class="emotion-31 emotion-32 emotion-1 emotion-34 fp-Box fp-DropdownMenu"
  data-dialog="true"
  id="test"
  role="menu"
  tabindex="-1"
>
  <div
    class="emotion-28 emotion-1 emotion-2 fp-Box fp-DropdownMenuGroup"
    role="group"
  >
    <div
      class="emotion-4 emotion-1 emotion-6 test fp-Box fp-DropdownMenuItem"
      id="test-1"
      role="menuitem"
      tabindex="0"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Edit
    </div>
    <div
      class="emotion-4 emotion-1 emotion-6 test fp-Box fp-DropdownMenuItem"
      id="test-2"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Share
    </div>
    <div
      class="emotion-4 emotion-1 emotion-6 test fp-Box fp-DropdownMenuItem"
      id="test-3"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Rename
    </div>
    <div
      class="emotion-4 emotion-1 emotion-27 test fp-Box fp-DropdownMenuItem"
      id="test-4"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Delete
    </div>
  </div>
</div>
`;

exports[`overrides DropdownMenu.Item.css.root should render correctly 1`] = `
.emotion-34 {
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-31 {
  padding: 0.5rem 0;
  min-width: 200px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-32 {
  background-color: white;
  border-radius: 4px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-32:focus {
  outline: none;
  box-shadow: #9b90f6 0px 0px 0px 3px;
}

.emotion-11 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-11 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-11:hover {
  color: unset;
  fill: unset;
}

.emotion-11[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-11:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-11:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-11:not(:disabled):focus:active,
.emotion-11:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-11 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  background-color: red;
}

<div
  aria-label="Actions"
  aria-orientation="vertical"
  class="emotion-31 emotion-32 emotion-1 emotion-34 fp-Box fp-DropdownMenu"
  data-dialog="true"
  id="test"
  role="menu"
  tabindex="-1"
>
  <div
    class="emotion-28 emotion-1 emotion-2 fp-Box fp-DropdownMenuGroup"
    role="group"
  >
    <div
      class="emotion-4 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem"
      id="test-1"
      role="menuitem"
      tabindex="0"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Edit
    </div>
    <div
      class="emotion-11 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem"
      id="test-2"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Share
    </div>
    <div
      class="emotion-11 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem"
      id="test-3"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Rename
    </div>
    <div
      class="emotion-11 emotion-1 emotion-27 fp-Box fp-DropdownMenuItem"
      id="test-4"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Delete
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-34 {
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-31 {
  padding: 0.5rem 0;
  min-width: 200px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-32 {
  background-color: white;
  border-radius: 4px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-32:focus {
  outline: none;
  box-shadow: #9b90f6 0px 0px 0px 3px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  aria-label="Actions"
  aria-orientation="vertical"
  class="emotion-31 emotion-32 emotion-1 emotion-34 fp-Box fp-DropdownMenu"
  data-dialog="true"
  id="test"
  role="menu"
  tabindex="-1"
>
  <div
    class="emotion-28 emotion-1 emotion-2 fp-Box fp-DropdownMenuGroup"
    role="group"
  >
    <div
      class="emotion-4 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem"
      id="test-1"
      role="menuitem"
      tabindex="0"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Edit
    </div>
    <div
      class="emotion-4 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem"
      id="test-2"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Share
    </div>
    <div
      class="emotion-4 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem"
      id="test-3"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Rename
    </div>
    <div
      class="emotion-4 emotion-1 emotion-27 fp-Box fp-DropdownMenuItem"
      id="test-4"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Delete
    </div>
  </div>
</div>
`;

exports[`props should render correctly for CSS props 1`] = `
.emotion-34 {
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-31 {
  padding: 0.5rem 0;
  min-width: 200px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-32 {
  background-color: white;
  border-radius: 4px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-32:focus {
  outline: none;
  box-shadow: #9b90f6 0px 0px 0px 3px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-6 {
  background-color: red !important;
}

<div
  aria-label="Actions"
  aria-orientation="vertical"
  class="emotion-31 emotion-32 emotion-1 emotion-34 fp-Box fp-DropdownMenu"
  data-dialog="true"
  id="test"
  role="menu"
  tabindex="-1"
>
  <div
    class="emotion-28 emotion-1 emotion-2 fp-Box fp-DropdownMenuGroup"
    role="group"
  >
    <div
      class="emotion-4 emotion-1 emotion-6 fp-Box fp-DropdownMenuItem"
      id="test-1"
      role="menuitem"
      tabindex="0"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Edit
    </div>
    <div
      class="emotion-4 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem"
      id="test-2"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Share
    </div>
    <div
      class="emotion-4 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem"
      id="test-3"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Rename
    </div>
    <div
      class="emotion-4 emotion-1 emotion-27 fp-Box fp-DropdownMenuItem"
      id="test-4"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Delete
    </div>
  </div>
</div>
`;

exports[`theming DropdownMenu.Item.css.root should render correctly 1`] = `
.emotion-34 {
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-31 {
  padding: 0.5rem 0;
  min-width: 200px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-32 {
  background-color: white;
  border-radius: 4px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-32:focus {
  outline: none;
  box-shadow: #9b90f6 0px 0px 0px 3px;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  background-color: red;
}

<div
  aria-label="Actions"
  aria-orientation="vertical"
  class="emotion-31 emotion-32 emotion-1 emotion-34 fp-Box fp-DropdownMenu"
  data-dialog="true"
  id="test"
  role="menu"
  tabindex="-1"
>
  <div
    class="emotion-28 emotion-1 emotion-2 fp-Box fp-DropdownMenuGroup"
    role="group"
  >
    <div
      class="emotion-4 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem"
      id="test-1"
      role="menuitem"
      tabindex="0"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Edit
    </div>
    <div
      class="emotion-4 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem"
      id="test-2"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Share
    </div>
    <div
      class="emotion-4 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem"
      id="test-3"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Rename
    </div>
    <div
      class="emotion-4 emotion-1 emotion-27 fp-Box fp-DropdownMenuItem"
      id="test-4"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2 emotion-3 fp-DropdownMenuItemIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Delete
    </div>
  </div>
</div>
`;
